--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "config": "^3.3.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
-    "mongoose": "^5.10.17"
+    "gridfs-stream": "^1.1.1",
+    "mongoose": "^5.10.17",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
