--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage": "https://bumblebee34.github.io/virtual-lab-backend",
   "name": "virtual-lab-backend",
   "version": "1.0.0",
   "description": "\"Virtual Lab Backend\"",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server"
+    "start": "nodemon server",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +18,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "gh-pages": "^3.2.0",
     "gridfs-stream": "^1.1.1",
     "mongoose": "^5.10.17",
     "multer": "^1.4.2",
